Handle device orientation when loading images for App Store screenshots Fix user estimates to high by default when creating App Store screenshots Using non-shuffled confusion lines in App Store screenshots for consistency

--- a/fastlane/screenshots/en-US/title.strings
+++ b/fastlane/screenshots/en-US/title.strings
@@ -1,7 +1,7 @@
 "1-normal-color-vision" = "See the world...";
-"2-Tritan" = "...through the eyes of the colourblind";
+"2-Tritan" = "...through the eyes of the colorblind";
 "3-next-cvd-analysis" = "Complete an analysis...";
 "4-save-new-profile" = "...see the results...";
 "5-new-profile-view" = "...and save your friend's profiles";
 "6-low-severity-image" = "Check out your saved photos...";
-"7-high-severity-image" = "...as a colourblind person would see them";
+"7-high-severity-image" = "...as a colorblind person would see them";
