--- a/MySight/en.lproj/Localizable.strings
+++ b/MySight/en.lproj/Localizable.strings
@@ -1,9 +1,9 @@
-/* 
+/*
   Localizable.strings
   MySight
 
   Created by Warren Gavin on 05/12/2021.
-  
+
 */
 
 "100%% dichromacy" = "100%% dichromacy";
@@ -18,3 +18,27 @@
 You will be shown a series of colors like the one below.";
 
 "cvd.analysis.explanation" = "People with normal color vision see a gradient of colors, but people with CVD find it harder to see the gradient and may even see a solid rectangle, depending on the severity.";
+
+// Help
+"help.para.1" = "If you're wondering \"What's a Deutan?\" or something like that then let's try to demystify what's going on.
+
+Any colour is a mix of three primary colours; blue, red and green. Colourblindness, or Colour Vision Deficiency (CVD), is the inability to correctly interpret one of those three colours.";
+
+
+
+"help.para.2" = "Somebody with normal colour vision is a **trichromat**, while a person with CVD is either an **anomalous trichromat** (they can see a certain amount of the colour they have a problem with), or a **dichromat** (they can't see it at all.)";
+
+"help.para.3" = "If a person with CVD has a problem seeing **blue**, they are a **Tritan**.
+
+If a person with CVD has a problem seeing **red**, they are a **Protan**.
+
+If a person with CVD has a problem seeing **green**, they are a **Deutan**.
+
+If you want to be more precise you factor in if they have anomalous trichromacy or dichromacy.
+
+A Tritan with anomalous trichromacy has **Tritanomaly**, and a Tritan with dichromacy has **Tritanopia**.
+
+A Protan with anomalous trichromacy has **Protanomaly**, and a Protan with dichromacy has **Protanopia**.
+
+A Deutan with anomalous trichromacy has **Deuteranomaly**, and a Deutan with dichromacy has **Deuteranopia**.
+";
